--- a/style.css
+++ b/style.css
@@ -6,5 +6,40 @@ body{
     justify-content: center;
     align-items: center;
     background-color:white;
-    color: rgb(52, 165, 52);
+    color: rgb(11, 172, 32);
 }
+
+.container{
+    width: 512px;
+    display: flex;
+    flex-direction: column;
+}
+
+.menu{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+.menu h1{
+    padding-left: 80px;
+    padding-top: 28px;
+}
+
+.logo{
+    width: 80px;
+    height: 80px;
+    padding-top: 28px;
+    padding-bottom: 15px;
+}
+
+.score{
+padding-top: 35px;
+padding-left: 60px;
+color: black;
+}
+
+footer{
+    color: gray;
+}
+
